[project]
name = "test-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch ; platform_system == 'Windows'",
    "torch>=2.8.0",
    "transformers>=4.55.2",
    "accelerate>=1.10.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.1",
    "notebook>=7.4.5",
    "ipywidgets>=8.1.7",
    "datasets>=4.0.0",
    "hf-xet>=1.1.8",
    "mx",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-windows", marker = "platform_system == 'Windows'" },
]
torchvision = [
    { index = "pytorch-windows", marker = "platform_system == 'Windows'" },
]
mx = { git = "https://github.com/retentionlabs/microxcaling.git", rev = "v1.1.0.patch0" }


[[tool.uv.index]]
name = "pytorch-windows"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
